trying to fix scrolling bug on mobile v3

--- a/css/styles.css
+++ b/css/styles.css
@@ -3421,6 +3421,12 @@ canvas {
 	left: 0;
 }
 
+@media screen and (max-width: 1000px) {
+    canvas {
+        display: hidden;
+    }
+}
+
 /* ------------------------------------------------------------------- 
  * responsive:
  * intro
